--- a/research.Rmd
+++ b/research.Rmd
@@ -5,8 +5,12 @@ pagetitle: "Joe Zemmels"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-## Reproducible Research
+## Firearms and Toolmarks Comparison Algorithms
 
-## Diagnostic Tools
+### CRAN Packages
 
-## Firearms & Toolmarks Comparison Algorithms
+- [cmcR](https://github.com/CSAFE-ISU/cmcR): An Implementation of the 'Congruent Matching Cells' Method
+
+### GitHub Packages
+
+- [impressions](https://github.com/jzemmels/impressions): An R package for diagnosing cartridge case impression comparison algorithms
