--- a/dspg.Rmd
+++ b/dspg.Rmd
@@ -5,6 +5,20 @@ pagetitle: "Joe Zemmels"
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-Summer 2021 Data Science for the Public Good
+In the Summer 2021, I had the honor of working with the Iowa Department of Human Rights (DHR) as part of the [Data Science for the Public Good](https://dspg.iastate.edu/) program.
+Iowa DHR was interested in collecting and analyzing Iowa workforce and economic development data to develop educational resources for state legislators and other stakeholders.
+As a Graduate Fellow, I along with ISU faculty [Chris Seeger](https://dspg.iastate.edu/people/christopher-seeger) and [Bailey Hanson](https://dspg.iastate.edu/people/bailey-hanson) supervised a team of three undergraduate students.
 
-[link](https://dspg2021.github.io/work/index.html)
+As the team supervisor, I worked closely with the undergraduate students to teach them how to use R and help them clarify the "story" of their data.
+My goal was less to dictate what each student should be working on and more to support them in searching for data that they would be passionate about analyzing.
+For example, I collaborated with and taught one of our undergraduate students how to create an interactive shiny application to explore language usage across Iowa.
+I developed resources such as an R package called `dspgWork` to scrape, save, and load data in a coherent manner.
+I also created a website and wrote a variety of articles (accessible here: [https://dspg2021.github.io/work/](https://dspg2021.github.io/work/)) demonstrating how to pull, analyze, and visualize data using my and other R packages.
+Apart from this supervisorial support role, I also took the lead on analyzing and summarizing data related to Iowa unemployment rates (see [here](https://dspg2021.github.io/work/index.html#how-does-employment-and-unemployment-compare-across-age-sex-and-raceethnicity)).
+
+Using software such as the [`tidycensus`](https://walker-data.com/tidycensus/) and [`tidyverse`](https://www.tidyverse.org/) R packages, we pulled and analyzed data from the [American Community Survey](https://www.census.gov/programs-surveys/acs), [Public-Use Microdata Survey](https://www.census.gov/programs-surveys/geography/guidance/geo-areas/pumas.html), and other sources. 
+We created poster series entitled *"Just the Facts" on Workforce and Economic Development* with our most salient findings.
+These have been used by DHR to educate legislators and other stakeholders on, for example, how the COVID-19 pandemic affected Iowa unemployment rates across age, sex, and race/ethnicity.
+I created a website to hold these posters accessible here: [https://dspg2021.github.io/work/index.html](https://dspg2021.github.io/work/index.html).
+One of our undergraduate students also created an interactive dashboard to show language usage across Iowa (not publicly available currently).
+
