--- a/contact.Rmd
+++ b/contact.Rmd
@@ -4,7 +4,7 @@ pagetitle: "Joe Zemmels"
 ---
 
 <link rel="stylesheet" href="styles.css" type="text/css">
-<!-- <link rel="stylesheet" href="academicicons/css/academicons.min.css"/> -->
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/>
 
 <img src="images/csafe-logo-90.png" style="width:25%; margin-right: 50px" align="right">
 
