--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ pagetitle: "Joe Zemmels"
 ---
 
 <link rel="stylesheet" href="styles.css" type="text/css">
-<!-- <link rel="stylesheet" href="academicicons/css/academicons.min.css"/> -->
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/>
 
 <img src="images/exteriorHeadshot_cropped.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left">
 
