--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -68,10 +68,10 @@ Fall 2017: Student Teacher at [Blaine High School Center for Engineering, Mathem
 
 2017-2018: **Lead Academic Test Prep Tutor** at [Kay Tutoring](https://www.kaytutoring.com/)
 
-  - Tutored middle and high school students in subjects ranging from Pre-Algebra to Multivariate Calculus
+  - Tutored middle and high school students in subjects ranging from Pre-Algebra to Calculus II
   
   - Developed and administered SAT and ACT test prep curriculum
 
 2013-2017: **Peer Tutor** at Winona State University
 
-  - Tutored fellow undergraduate students in subjects ranging from Algebra to Introductory Analysis
+  - Tutored fellow undergraduate students in subjects ranging from Algebra to Advanced Calculus
