Change a sentence in the index

--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ pagetitle: "Joe Zemmels"
 <img src="images/exteriorHeadshot_cropped.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left">
 
 I am a Ph.D. candidate in the [Department of Statistics](https://www.stat.iastate.edu/) at Iowa State University and Graduate Research Assistant at the [Center for Statistics and Applications in Forensic Evidence](https://www.forensicstats.org/) (CSAFE).
-My research interests are in forensic statistics and pattern recognition, with applications to cartridge case evidence.
+My research interests are in pattern recognition and forensic statistics, with an emphasis on firearm and toolmark evidence.
 
 I earned my M.Sc. in statistics in 2020 from Iowa State University and B.Sc. in Honors Mathematics and Mathematics: Secondary Education from Winona State University in 2017.
 
